c3/hash_extract_pv
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/hash_extract_pv/src/utils.c:973:12: error: expected expression
*( _OWORD *)&move.from = *( _OWORD *)&v6[best].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/hash_extract_pv/src/utils.c:973:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&move.from = *( _OWORD *)&v6[best].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/hash_extract_pv/src/utils.c:973:37: error: expected expression
*( _OWORD *)&move.from = *( _OWORD *)&v6[best].from; 
                                    ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/hash_extract_pv/src/utils.c:973:29: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&move.from = *( _OWORD *)&v6[best].from; 
                            ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/hash_extract_pv/src/obj/utils.o] Error 1
